src/components/BookList/BookList.styles.scss
.book-list {
    display: grid;
    grid-template-columns: repeat(5, minmax(auto, 1fr));
    gap: 10px;      
}

.book {
    font-family: 'Playfair Display', serif;
    text-align: center;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    max-width: 200px;
    height: auto;
    border: 1px solid brown;
    border-radius: 8px;
    padding: 10px;
    background-color: rgba(255, 228, 196, 0.747);
    color: rgb(43, 20, 2);
    z-index: 10;
 }

